--- a/session07_Table-Audio-Video/ex06_Form-Table.html
+++ b/session07_Table-Audio-Video/ex06_Form-Table.html
@@ -15,7 +15,7 @@
 <body>
     <h1>Member Register Form</h1>
     <form action="../session05_Bootstrap/ex04_Carousel.html">
-        <table>
+        <table border="1">
             <tr>
                 <td align="right">Email: </td>
                 <td>
@@ -93,13 +93,12 @@
                 <td>
                     <!-- <input type="submit" value="Register"> -->
                     <img src="" width="50px">
+                    <input type="submit" value="Register">
                     <input type="reset" value="Clear all">
                     <input type="button" value="Help">
                 </td>
             </tr>
-
         </table>
-
     </form>
 </body>
 
